@@ -48,7 +48,6 @@ import VASSAL.configure.ColorConfigurer;
 import VASSAL.configure.Configurer;
 import VASSAL.configure.StringEnum;
 import VASSAL.configure.VisibilityCondition;
-import VASSAL.i18n.Resources;
 
 public class SquareGrid extends AbstractConfigurable implements GeometricGrid, GridEditor.EditableGrid {
   protected double dx = 48.0;
@@ -59,7 +58,7 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
   protected boolean edgesLegal = false;
   protected boolean cornersLegal = false;
   protected boolean dotsVisible = false;
-  protected Color color = Color.black;
+  protected Color color;
   protected GridContainer container;
   protected Map<Integer,Area> shapeCache = new HashMap<Integer,Area>();
   protected SquareGridEditor gridEditor;
@@ -115,18 +114,18 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
     return container;
   }
 
-  public static final String DX = "dx"; //$NON-NLS-1$
-  public static final String DY = "dy"; //$NON-NLS-1$
-  public static final String X0 = "x0"; //$NON-NLS-1$
-  public static final String Y0 = "y0"; //$NON-NLS-1$
-  public static final String VISIBLE = "visible"; //$NON-NLS-1$
-  public static final String CORNERS = "cornersLegal"; //$NON-NLS-1$
-  public static final String EDGES = "edgesLegal"; //$NON-NLS-1$
-  public static final String COLOR = "color"; //$NON-NLS-1$
-  public static final String DOTS_VISIBLE = "dotsVisible"; //$NON-NLS-1$
-  public static final String RANGE = "range"; //$NON-NLS-1$
-  public static final String RANGE_MANHATTAN = "Manhattan"; //$NON-NLS-1$
-  public static final String RANGE_METRIC = "Metric"; //$NON-NLS-1$
+  public static final String DX = "dx";
+  public static final String DY = "dy";
+  public static final String X0 = "x0";
+  public static final String Y0 = "y0";
+  public static final String VISIBLE = "visible";
+  public static final String CORNERS = "cornersLegal";
+  public static final String EDGES = "edgesLegal";
+  public static final String COLOR = "color";
+  public static final String DOTS_VISIBLE = "dotsVisible";
+  public static final String RANGE = "range";
+  public static final String RANGE_MANHATTAN = "Manhattan";
+  public static final String RANGE_METRIC = "Metric";
   
   public static class RangeOptions extends StringEnum {
     public String[] getValidValues(AutoConfigurable target) {
@@ -151,16 +150,16 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
 
   public String[] getAttributeDescriptions() {
     return new String[]{
-    	Resources.getString("Editor.Grid.x_offset"), //$NON-NLS-1$
-    	Resources.getString("Editor.Grid.y_offset"), //$NON-NLS-1$
-    	Resources.getString("Editor.RectangleGrid.width"), //$NON-NLS-1$
-    	Resources.getString("Editor.RectangleGrid.height"), //$NON-NLS-1$
-    	Resources.getString("Editor.RectangleGrid.range_method"), //$NON-NLS-1$
-    	Resources.getString("Editor.Grid.edges"), //$NON-NLS-1$
-    	Resources.getString("Editor.RectangleGrid.corners"), //$NON-NLS-1$
-    	Resources.getString("Editor.Grid.grid"), //$NON-NLS-1$
-    	Resources.getString("Editor.Grid.center_dots"), //$NON-NLS-1$
-    	Resources.getString(Resources.COLOR_LABEL),
+      "X offset:  ",
+      "Y offset:  ",
+      "Cell Width:  ",
+      "Cell Height:  ",
+      "Range Calculation Method:  ",
+      "Edges are legal locations?",
+      "Corners are legal locations?",
+      "Show Grid?",
+      "Draw Center Dots?",
+      "Color:  "
     };
   }
 
@@ -202,7 +201,7 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
   }
 
   public static String getConfigureTypeName() {
-    return Resources.getString("Editor.RectangleGrid.component_type"); //$NON-NLS-1$
+    return "Rectangular Grid";
   }
 
   public String getGridName() {
@@ -214,7 +213,7 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
   }
 
   public VASSAL.build.module.documentation.HelpFile getHelpFile() {
-    return HelpFile.getReferenceManualPage("RectangularGrid.htm"); //$NON-NLS-1$
+    return HelpFile.getReferenceManualPage("RectangularGrid.htm");
   }
 
 
@@ -247,33 +246,35 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
       return String.valueOf(dotsVisible);
     }
     else if (COLOR.equals(key)) {
-      return ColorConfigurer.colorToString(color);
+      return visible ? ColorConfigurer.colorToString(color) : null;
     }
     return null;
   }
 
   public void setAttribute(String key, Object val) {
+    if (val == null)
+      return;
     if (X0.equals(key)) {
       if (val instanceof String) {
-        val = Integer.valueOf((String) val);
+        val = new Integer((String) val);
       }
       origin.x = ((Integer) val).intValue();
     }
     else if (Y0.equals(key)) {
       if (val instanceof String) {
-        val = Integer.valueOf((String) val);
+        val = new Integer((String) val);
       }
       origin.y = ((Integer) val).intValue();
     }
     else if (DY.equals(key)) {
       if (val instanceof String) {
-        val = Double.valueOf((String) val);
+        val = new Double((String) val);
       }
       dy = ((Double) val).doubleValue();
     }
     else if (DX.equals(key)) {
       if (val instanceof String) {
-        val = Double.valueOf((String) val);
+        val = new Double((String) val);
       }
       dx = ((Double) val).doubleValue();
     }
@@ -442,7 +443,7 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
   }
   
   public boolean isVisible() {
-    return visible == true || (gridNumbering != null && gridNumbering.isVisible());
+    return visible;
   }
 
   public void setVisible(boolean b) {
@@ -466,7 +467,7 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
 
   /** Draw the grid even if not marked visible */
   public void forceDraw(Graphics g, Rectangle bounds, Rectangle visibleRect, double scale, boolean reversed) {
-    if (!bounds.intersects(visibleRect) || color == null) {
+    if (!bounds.intersects(visibleRect)) {
       return;
     }
 
@@ -495,7 +496,7 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
 
     Point p1 = new Point();
     Point p2 = new Point();
-    g2d.setColor(color);
+    g2d.setColor(color == null ? Color.black : color);
     // x is the location of a vertical line
     for (double x = xmin; x < xmax; x += deltaX) {
       p1.move((int) round(x), region.y);
@@ -524,7 +525,7 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
     boolean buttonExists = config != null;
     Configurer c = super.getConfigurer();
     if (!buttonExists) {
-      JButton b = new JButton(Resources.getString("Editor.Grid.edit_grid")); //$NON-NLS-1$
+      JButton b = new JButton("Edit Grid");
       b.addActionListener(new ActionListener() {
         public void actionPerformed(ActionEvent e) {
           editGrid();
@@ -547,7 +548,7 @@ public class SquareGrid extends AbstractConfigurable implements GeometricGrid, G
     cfg.getConfigurer(Y0).setValue(String.valueOf(origin.y));
   }
   
-  public static class SquareGridEditor extends GridEditor {
+  public class SquareGridEditor extends GridEditor {
     private static final long serialVersionUID = 1L;
 
     public SquareGridEditor(EditableGrid grid) {
