@@ -229,10 +229,11 @@ public class ZoneHighlight extends AbstractConfigurable  {
   }
 
   public static class OpacityConfig implements ConfigurerFactory {
+
     public Configurer getConfigurer(AutoConfigurable c, String key, String name) {
-      final ZoneHighlight zh = (ZoneHighlight) c;
-      return zh.new PercentageConfigurer(key, name, zh.opacity);
+      return ((ZoneHighlight) c).new PercentageConfigurer(key, name, new Integer(((ZoneHighlight) c).opacity));
     }
+    
   }
   
   public void addTo(Buildable b) {
@@ -296,7 +297,7 @@ public class ZoneHighlight extends AbstractConfigurable  {
     }
     else if (WIDTH.equals(key)) {
       if (val instanceof String) {
-        val = Integer.valueOf((String) val);
+        val = new Integer((String) val);
       }
       width = ((Integer) val).intValue();
     }
@@ -306,7 +307,7 @@ public class ZoneHighlight extends AbstractConfigurable  {
     }
     else if (OPACITY.equals(key)) {
       if (val instanceof String) {
-        val = Integer.valueOf((String) val);
+        val = new Integer((String) val);
       }
       opacity = ((Integer) val).intValue();
     }
@@ -353,7 +354,7 @@ public class ZoneHighlight extends AbstractConfigurable  {
     }
 
     public void setValue(String s) {
-      opacity = Integer.parseInt(s);   
+      opacity = (new Integer(s)).intValue();   
     }
 
     public Component getControls() {
@@ -361,8 +362,8 @@ public class ZoneHighlight extends AbstractConfigurable  {
       final JSlider slider = new JSlider(JSlider.HORIZONTAL,0,100,opacity);
 
       final HashMap<Integer,JLabel> labelTable = new HashMap<Integer,JLabel>();
-      labelTable.put(0, new JLabel("Transparent"));
-      labelTable.put(100, new JLabel("Opaque"));
+      labelTable.put(new Integer(0), new JLabel("Transparent"));
+      labelTable.put(new Integer(100), new JLabel("Opaque"));
 
       slider.setMajorTickSpacing(10);
       slider.setPaintTicks(true);
