@@ -45,7 +45,7 @@ public class IntegerPreference extends BasicPreference {
 
   public void setDefaultValue(Object value) {
     if (value instanceof String) {
-      value = Integer.valueOf((String) value);
+      value = new Integer((String) value);
     }
     defaultValue = ((Integer) value).intValue();
       
@@ -53,8 +53,7 @@ public class IntegerPreference extends BasicPreference {
 
   public Configurer getPreferenceConfigurer() {
     if (config == null) {
-      config =
-        new IntConfigurer(getVariableName(), getDescription(), defaultValue);
+      config = new IntConfigurer(getVariableName(), getDescription(), new Integer(defaultValue));
       config.addPropertyChangeListener(new PropertyChangeListener() {
         public void propertyChange(PropertyChangeEvent e) {
           updateGlobalProperty(config.getValueString());          
@@ -62,4 +61,5 @@ public class IntegerPreference extends BasicPreference {
     }
     return config;
   }
+
 }
